--- a/src/index.css
+++ b/src/index.css
@@ -1,69 +1,53 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
+body {
+  font-family: "Bruno Ace SC", cursive;
+  background-image: url("../public/images/tronCircles.png");
+  background-size: cover;
+  min-height: 100vh;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
+.heading {
+  padding: 20px;
+  color: aqua;
+  background-color: #01161ece;
+  margin-top: -50px;
+  border-radius: 20px;
+  letter-spacing: 0.4rem;
+  text-shadow: 0 0 20px aqua;
 }
-a:hover {
-  color: #535bf2;
-}
-
-body {
-  margin: 0;
+#board-container {
+  background-image: url("../public/images/tron.png");
+  background-size: cover;
+  width: 35rem;
   display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  padding: 20px;
+  border-radius: 30px;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+.square {
+  height: 8rem;
+  width: 8rem;
+  background-color: rgba(58, 88, 112, 0.391);
+  margin: 20px;
+  border-radius: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 0 0 20px rgba(152, 251, 251, 0.733);
 }
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+#move {
+  font-size: 6rem;
+  color: aqua;
+  text-shadow: 0 0 50px aqua;
+  font-family: "Bruno Ace SC", cursive;
 }
