--- a/src/index.css
+++ b/src/index.css
@@ -38,8 +38,8 @@ body {
 }
 
 .square {
-  height: 25%;
-  width: 25%;
+  width: 6rem;
+  height: 6rem;
   background-color: rgba(31, 45, 57, 0.701);
   margin: 10px;
   border-radius: 20px;
@@ -105,9 +105,9 @@ body {
     margin: 0;
   }
   .square {
-    width: 10vw;
-    height: 10vw;
     margin: 20px;
+    height: 10rem;
+    width: 10rem;
   }
   #move {
     font-size: 8rem;
